[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scene/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Resources/GUI/DungeonWall.png" type="Texture" id=2]
[ext_resource path="res://Resources/Character/WarriorStay2.png" type="Texture" id=3]
[ext_resource path="res://Resources/Character/WarriorStay3.png" type="Texture" id=4]
[ext_resource path="res://Resources/Character/WarriorStay1.png" type="Texture" id=5]
[ext_resource path="res://Resources/Character/WarriorStay4.png" type="Texture" id=6]
[ext_resource path="res://Resources/Shaider/TilingAndOffset.gdshader" type="Shader" id=7]
[ext_resource path="res://Node/GUI/GlowButton.tscn" type="PackedScene" id=8]

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 7 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 32, 48 )
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="GDScript" id=9]
script/source = "extends Panel


var battonSoundPath = [\"res://Resources/Audio/MainMenu/discord-call-sound.mp3\", \"res://Resources/Audio/MainMenu/foo.mp3\", \"res://Resources/Audio/MainMenu/new-roblox-death-sound.mp3\", \"res://Resources/Audio/MainMenu/slowed-down-roblox-death-noise.mp3\", \"res://Resources/Audio/MainMenu/vine-boom.mp3\"]

func playButtonSound():
	var soundPath = battonSoundPath[int(rand_range(0, len(battonSoundPath)))]
	var sound = load(soundPath)
	$PlayerSoung.stream = sound
	$PlayerSoung.play()
	pass

func _ready():
	randomize()
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _on_imgPlayer1_pressed():
	playButtonSound()
	pass # Replace with function body.


func _on_imgPlayer2_pressed():
	playButtonSound()
	pass # Replace with function body.
"

[sub_resource type="AnimatedTexture" id=8]
frames = 4
frame_0/texture = ExtResource( 5 )
frame_1/texture = ExtResource( 3 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 4 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 6 )
frame_3/delay_sec = 0.0

[sub_resource type="Animation" id=1]
resource_name = "LoadScreen"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("AnimationPlayer/ScreenLoader:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.129412, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("AnimationPlayer/ScreenLoader:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.129412, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("AnimationPlayer/ScreenLoader:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.129412, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("AnimationPlayer/ScreenLoader:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.5 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimationPlayer/ScreenLoader:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("AnimationPlayer/ScreenLoader:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("AnimationPlayer/ScreenLoader:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("AnimationPlayer/ScreenLoader:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("AnimationPlayer/ScreenLoader:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("AnimationPlayer/ScreenLoader:self_modulate:r")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("AnimationPlayer/ScreenLoader:self_modulate:g")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("AnimationPlayer/ScreenLoader:self_modulate:b")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("AnimationPlayer/ScreenLoader:self_modulate:a")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("AnimationPlayer/ScreenLoader:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="Theme" id=4]
Panel/styles/panel = SubResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 210.0 ],
"_edit_vertical_guides_": [ 187.0, 837.0 ]
}

[node name="Background" type="Panel" parent="."]
material = SubResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )
script = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="imgPlayer1" type="TextureButton" parent="Background"]
anchor_left = 0.0439453
anchor_top = 0.35
anchor_right = 0.180664
anchor_bottom = 0.595
texture_normal = SubResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="imgPlayer2" type="TextureButton" parent="Background"]
anchor_left = 0.816406
anchor_top = 0.35
anchor_right = 0.953125
anchor_bottom = 0.595
texture_normal = SubResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayerSoung" type="AudioStreamPlayer" parent="Background"]
pitch_scale = 0.65

[node name="CenterContainer" type="VBoxContainer" parent="."]
anchor_left = 0.182617
anchor_top = 0.35
anchor_right = 0.817383
anchor_bottom = 1.0
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/separation = -311
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NewGame" parent="CenterContainer" instance=ExtResource( 8 )]
light_mask = 3
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 238.0
margin_right = 411.0
margin_bottom = 32.0
text = " В преключение "

[node name="NewGame2" parent="CenterContainer" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 239.0
margin_top = 39.0
margin_right = 410.0
margin_bottom = 71.0
text = "    Настройки    "

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/LoadScreen = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="ScreenLoader" type="Panel" parent="AnimationPlayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )

[connection signal="pressed" from="Background/imgPlayer1" to="Background" method="_on_imgPlayer1_pressed"]
[connection signal="pressed" from="Background/imgPlayer2" to="Background" method="_on_imgPlayer2_pressed"]
[connection signal="pressed" from="CenterContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
